Manejo de estado del cielo
